engine: Fix deprecated use of the URL class in CodeSystems class